[tests] refactored mac-specific test settings into a new top-level mac profile
Change-Id: I609d5d6720e67f356f92c36500cab8bcd1717e2f